Add in workspaceAPI to allow setting the tab title
Fixes console view tab title being displayed as 'Loading...'

--- a/aura/sdg/sdg.cmp
+++ b/aura/sdg/sdg.cmp
@@ -76,6 +76,7 @@
     <aura:attribute name="filtersize" type="String" />
 
     <lightning:flexipageRegionInfo width="{!v.width}" />
+    <lightning:workspaceAPI aura:id="workspace"/>
 
     <!-- Events -->
     <aura:handler name="init" value="{!this}" action="{!c.doInit}" />
