--- a/aura/sdgDatagridCell/sdgDatagridCell.css
+++ b/aura/sdgDatagridCell/sdgDatagridCell.css
@@ -1,6 +1,9 @@
 .THIS.pullup{
     vertical-align: top;
 }
+.THIS.pullright{
+    text-align: right;
+}
 .THIS .linkbutton {
     line-height:1em;
 }
